[package]
name = "ring"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "RING: Rust Internet Network Grapher - Multi-host TCP scanner with ICMP ping support"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Bearcry55/ring"
keywords = ["network", "ping", "tcp", "scanner", "monitoring"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "ring"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surge-ping = "0.8"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
